apps/argocd/ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: argocd
  namespace: argocd
spec:
  selector:
    istio: ingress
  servers:
    - hosts:
        - 'argocd.home.arpa'
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts:
        - 'argocd.home.arpa'
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: argocd-server-tls

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  gateways:
  - argocd
  hosts:
  - 'argocd.home.arpa'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
